[package]
name = "jwt-simple-jwks"
version = "0.3.0"
authors = ["Jean-François Bilodeau <jfbilodeau@chronogears.com>", "Sean Pianka <sean@lunabit.io>"]
edition = "2018"
keywords = ["jwt", "jwks", "jwk", "gcp", "jwt-simple"]
categories = ["web-programming", "cryptography", "authentication"]
license = "MIT"
homepage = "https://github.com/seanpianka/jwt-simple-jwks"
repository = "https://github.com/seanpianka/jwt-simple-jwks"
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
regex = "1.3.7"
reqwest = { version = "^0.13", default-features = false, features = [
    "json",
    "rustls",
    "http2",
    "charset",
] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.53"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
